Created docker container